--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	</head>
 	<body>
 		<div class = "container">
-			<form action = "PHP/checking_system_php.php" method = "POST">
 				<div class = "card-panel blue-text text-darken-2">
 					<p>ialanm</p>
 					<p>Keyword: a</p>
@@ -271,8 +270,8 @@
 					<p>Keyword: y</p>
 					<p>The rgb number of <input type = "text" id = "example_49" name = "key_49" /> is rgb(255,255,0)</p>
 				</div>
-				<p><input type = "submit" value = "Submit" /></p>
-			</form>
+				<p>This is just a demo of the real page, for fun. Download the repository and run local on your machine</p>
+				<p>Feel free to feedback to me</p>
 		</div>
 	</body>
 </html>
